--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,65 @@
-
-html{
-    background-color: white;
+.body {
+    background-color: #2B303A;
 }
-/* HEADER */
-.navbar{
+
+/*********************************SPA*********************************/
+
+.page {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+/********************************* HEADER BAR *********************************/
+
+.navbar {
     background-color: orangered;
 }
-.active {
-    background-color:rgb(235, 235, 235)!important;/* playing around with colors*/
-    border-color:black !important;
-     color:black!important; 
-}
 
-/* MENU STYLE */
-#menuList{
-    height:100vh;
+/********************************* NAV MENU *********************************/
+
+#menuList {
+    height: 100vh;
     list-style-type: none!important;
     /* text-align: ; */
     border-right: 1px solid black;
-   
+    background-color: #2B303A;
+    text-align: center;
 }
-.list-group-item{
+
+#menu {
+    padding: 0;
+}
+
+.active {
+    background-color: rgba(235, 235, 235, 0.144)!important;
+    /* playing around with colors*/
+    border-color: black !important;
+    color: white!important;
+}
+
+.list-group-item {
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid lightgrey;
-   
 }
-/* DASHBOARD STYLE */
 
+.list-group-item:hover {
+    background-color: rgba(235, 235, 235, 0.144)!important;
+    border-color: black !important;
+    color: white!important;
+}
+
+.content {
+    background-image: url(/img/pizza5.jpeg);
+    background-size: cover;
+    background-color: #cccccc;
+    color: white;
+}
+
+.list-group-item {
+    background-color: #2B303A;
+    color: white;
+}
