--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 .body {
     background-color: #2B303A;
-    
+}
+
+.row {
+    margin: 0;
 }
 
 /*********************************SPA*********************************/
@@ -22,12 +25,13 @@
 /********************************* NAV MENU *********************************/
 
 #menuList {
-    height: 100vh;
     list-style-type: none!important;
     /* text-align: ; */
     border-right: 1px solid black;
+    border: 1px solid black;
     background-color: #2B303A;
     text-align: center;
+    height: 100vh;
 }
 
 #menu {
@@ -53,19 +57,20 @@
     color: white!important;
 }
 
-#homeContainer{
+#homeContainer {
     background-image: url(/img/pizza5.jpeg);
     background-size: cover;
     background-color: #cccccc;
     color: white;
-} 
+    height: 100vh;
+}
 
 .list-group-item {
     background-color: #2B303A;
     color: white;
 }
 
-
+/********************************* MODAL *********************************/
 
 .signInBtn {
     border-radius: 30px;
@@ -103,12 +108,7 @@
 
 .modal-header, .modal-body, .modal-footer {
     padding: 10px;
-    
- 
-  
 }
-
-
 
 .modal-body {
     background: #2B303A;
@@ -127,11 +127,42 @@
     }
 }
 
- .btn-primary{
+.btn-primary {
     border-radius: 30px;
     border: solid white 1px;
     color: white;
     padding: 0px 5px 5px 0x;
     background-color: #2B303A;
+}
 
-} 
+
+/********************************* Sign Up Page*********************************/
+
+#signUpForm {
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+}
+
+#signUpContainer>h1 {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+#signUpContainer {
+    background-color: #8D909B;
+}
+
+
+
+@media (max-width: 576px) { /* need this for nav menu on mobile  */
+    #menuList {
+        height: 100%;
+    }
+}
+
+
+@media (max-width: 768px) { /* need this for nav menu on mobile messing around with this...  */
+    #menuList {
+        height: 100%;
+    }
+}
