--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,15 @@
 }
 
 
+
+
+/*********************************profile page ********************************/
+
+
+
+
+
+
 @media (max-width: 576px) { /* need this for nav menu on mobile  */
     #menuList {
         height: 100%;
