--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,9 @@
 /*********************************profile page ********************************/
 
 
-
+#profileForm{
+    text-align: center;
+}
 
 
 
