--- a/css/main.css
+++ b/css/main.css
@@ -201,3 +201,45 @@
         height: 100%;
     }
 }
+
+
+
+  .child {
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 200px;
+    background: red;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    animation-name: alert;
+    animation-duration: .8s;
+
+    
+    
+  }
+
+  .userNote{
+    top: 0%;
+    left: 0%;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    
+  }
+
+  @keyframes alert {
+    from {
+        opacity: 0;
+        top:0;
+        transform: rotateX(15deg);
+        transform: translate(-50%, -50%);
+    }
+    to {
+        opacity: 1;
+        top: 50%;
+        transform: rotateX(0deg);
+        transform: translate(-50%, -50%);
+    }
+}
